RESOLVED FIXED42157
[v8] Web Inspector: inspector front-end crashes upon JS exception in front-end callbacks
https://bugs.webkit.org/show_bug.cgi?id=42157
Summary [v8] Web Inspector: inspector front-end crashes upon JS exception in front-en...
Andrey Kosyakov
Reported 2010-07-13 05:41:52 PDT
Inspector front-end renderer crashes if a front-end callback (such as WebInspector.parsedScriptSource) throws a JS exception (e.g. due to JS syntax error).
Attachments
patch (1.65 KB, patch)
2010-07-13 05:48 PDT, Andrey Kosyakov
yurys: review-
yurys: commit-queue-
patch (1.25 KB, patch)
2010-07-13 06:03 PDT, Andrey Kosyakov
no flags
Andrey Kosyakov
Comment 1 2010-07-13 05:48:36 PDT
Yury Semikhatsky
Comment 2 2010-07-13 05:52:24 PDT
Comment on attachment 61359 [details] patch WebKit/chromium/src/WebDevToolsFrontendImpl.cpp:179 + if (tryCatch.HasCaught()) { You don't need this, just calling tryCatch.SetVerbose(true) should be enough.
Andrey Kosyakov
Comment 3 2010-07-13 06:03:52 PDT
WebKit Commit Bot
Comment 4 2010-07-13 07:23:39 PDT
Comment on attachment 61362 [details] patch Clearing flags on attachment: 61362 Committed r63201: <http://trac.webkit.org/changeset/63201>
WebKit Commit Bot
Comment 5 2010-07-13 07:23:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.