2010-07-13  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: catch and log JS exceptions resulting from executing a
        script on inspector front-end to prevent renderer from crashing.
        https://bugs.webkit.org/show_bug.cgi?id=42157

        * src/WebDevToolsFrontendImpl.cpp:
        (WebKit::WebDevToolsFrontendImpl::executeScript):

Canonical link: https://commits.webkit.org/54057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63201 268f45cc-cd09-0410-ab3c-d52691b4dbfc